--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <div class="image-container">
                 <img src="imagem/banner3.png" alt="Banner">
             </div>
+            <div class="image-mobile">
+                <img src="imagem/banner media2.png" alt="Banner">
+            </div>
     
             <div class="buttons-container">
                 <a href="https://api.whatsapp.com/send?phone=554130220411" class="button">
@@ -90,7 +93,64 @@
             </div>
          </div>
      </div>
+     <div class="app">
+        <div class="text-app">
+            <h3>Seu dia-a-dia mais digital</h3>
+            <p>Acompanhe seu histórico de compras, saldo e limites.<br>
+                 Confira a sua melhor data para compra e também gere boletos<br>
+                  para pagamento dos seus carnês e faturas.
+            </p>
+        </div>
+        <div class="celular">
+          <img src="./imagem/celular-login.png">
+        </div>
+     </div>
+     <div class="title-trc">
+        <h4>TRC Taborda</h4>
+        <p>Mais de 20 anos de experiência no mercado</p>
+    </div>
+     <div class="trc-pr">
+        <div class="trc-dt">
+            <img src="./imagem/Vantagens-Loja.jpg" alt="Imagem 1">
+            <div class="text-overlay">
+                <a href="https://trctaborda.com.br/quem-somos">
+                    <p>Nosso <br><strong>Compromisso</strong></p>
+                </a>
+            </div>
+        </div>
+
+        <div class="trc-dt">
+            <img src="./imagem/cadeado-seguranca-700x432.jpg" alt="Imagem 2">
+            <div class="text-overlay">
+                <a href="https://trctaborda.com.br/servicos">
+                    <p>Sua e Nossa <br><strong>Segurança</strong></p>
+                </a>
+            </div>
+        </div>
+
+        <div class="trc-dt">
+            <img src="./imagem/vantagensi.jpg" alt="Imagem 3">
+            <div class="text-overlay">
+                <a href="https://trctaborda.com.br/parceiros">
+                    <p>Nossos <br><strong>Parceiros</strong></p>
+                </a>
+            </div>
+        </div>
+
+    </div>
     </main>
+    <footer class="footer-content">
+        <div class="footer-text">
+            <h2 class="footer-title"><span style="color: white;">TRC </span>TABORDA</h2>
+            <p class="footer-info">TRC Taborda Recuperação de Crédito S/S LTDA</p>
+            <p class="footer-info">CNPJ: 05.348.049/0001-53</p>
+            <p class="footer-info">Av. Mal. Floriano Peixoto, 523. Centro, Curitiba - PR</p>
+            <p class="footer-info">(41) 3022 0406</p>
+        </div>
+        <div class="footer-bottom">
+            © 2024 TRC Taborda. Todos os direitos reservados.
+        </div>
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
