--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="container">
             <div class="image-container">
-                <img src="imagem/banner3.png" alt="Banner">
+                <img  src="imagem/banner3.png" alt="Banner">
             </div>
             <div class="image-mobile">
                 <img src="imagem/banner media2.png" alt="Banner">
@@ -103,6 +103,9 @@
         </div>
         <div class="celular">
           <img src="./imagem/celular-login.png">
+        </div>
+        <div class="button-app">
+            <a href="https://lojasrenner.onelink.me/UVlR/e7e46298">Acesse aqui</a>
         </div>
      </div>
      <div class="title-trc">
