--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <img src="imagem/banner media2.png" alt="Banner">
             </div>
     
-            <div class="buttons-container">
-                <a href="https://api.whatsapp.com/send?phone=554130220411" class="button">
+            <div class="buttons-container" >
+                <a class="button" id="button">
                     <img src="imagem/whatsapp.png" alt="WhatsApp">
                     <span>Negocie no WhatsApp</span>
                 </a>
@@ -154,6 +154,20 @@
             © 2024 TRC Taborda. Todos os direitos reservados.
         </div>
     </footer>
+    <div class="modal-overlay" id="modal-overlay">
+        <div class="form-box">
+            <span class="close-btnn" onclick="closeModal()">×</span>
+            <form class="form" method="post" action="php/cadastro.php"> 
+                <span class="title">Atualize o seu cadastro</span>
+                <div class="form-container">
+                    <input type="text" name="name" class="input" placeholder="CPF/CNPJ" required>
+                    <input type="email" name="email" class="input" placeholder="Email" required>
+                    <input type="number" name="numero" class="input" placeholder="Número" required>
+                </div>
+                <button type="submit" class="botao">Atualizar</button>
+            </form>
+        </div>
+    </div>    
     <script src="./index.js"></script>
 </body>
 </html>
