--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
      <div class="app">
         <div class="text-app">
             <h3>Seu dia-a-dia mais digital</h3>
-            <p>Acompanhe seu histórico de compras, saldo e limites.<br>
-                 Confira a sua melhor data para compra e também gere boletos<br>
-                  para pagamento dos seus carnês e faturas.
+            <p>O App Renner facilita a renegociação de dívidas, <br>
+                permitindo que os usuários ajustem seus pagamentos diretamente pelo celular.<br>
+                 Com opções de parcelamento e condições especiais, o app oferece uma forma prática <br>
+                 e rápida de regularizar pendências de forma conveniente.
             </p>
         </div>
         <div class="celular">
@@ -119,8 +120,11 @@
         <div class="serasa-text">
             <h5>Serasa limpa nome</h5>
             <p> ✅ Descontos Especiais – Pague menos ao negociar suas dívidas.<br>
+                <br>
                 ✅ Parcelamento Fácil – Opções acessíveis para quitar no seu ritmo.<br>
+                <br>
                 ✅ 100% Online – Resolva tudo pelo site ou app, sem sair de casa.<br>
+                <br>
                 ✅ Nome Limpo Rápido – Após o pagamento, seu nome pode ser regularizado em poucos dias.</p>
         </div>
      </div>
@@ -175,9 +179,9 @@
             <form class="form" method="post" action="php/cadastro.php"> 
                 <span class="title">Atualize o seu cadastro</span>
                 <div class="form-container">
-                    <input type="text" name="name" class="input" placeholder="Nome" required>
-                    <input type="email" name="email" class="input" placeholder="Email" required>
-                    <input type="number" name="numero" class="input" placeholder="Número" required>
+                    <input type="text" name="NOME" class="input" placeholder="Nome" required>
+                    <input type="email" name="EMAIL" class="input" placeholder="Email" required>
+                    <input type="number" name="TELEFONE" class="input" placeholder="Número" required>
                 </div>
                 <button type="submit" class="botao">Atualizar</button>
             </form>
